// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/auth/new-password should handle submit form 1`] = `
<styled(Component)>
  <styled(Component)>
    <styled(Component)>
      <img
        alt="Logo"
        src="https://static.wixstatic.com/media/c55a42_78b53de3385f4c32baacc030ddaad4b5~mv2_d_2000_1500_s_2.png/v1/fill/w_361,h_196,al_c,usm_0.66_1.00_0.01/c55a42_78b53de3385f4c32baacc030ddaad4b5~mv2_d_2000_1500_s_2.png"
      />
    </styled(Component)>
    <styled(Component)>
      <Field
        component={[Function]}
        errorFontSize={14}
        errorMargin="0 0 5px 0"
        label="Old password:"
        labelFontSize={14}
        labelMargin="5px 0 5px 0"
        name="oldPassword"
        type="password"
        validate={[Function]}
        width={1}
      />
      <Field
        component={[Function]}
        errorFontSize={14}
        errorMargin="0 0 5px 0"
        label="New password:"
        labelFontSize={14}
        labelMargin="5px 0 5px 0"
        name="newPassword"
        type="password"
        validate={[Function]}
        width={1}
      />
      <WithTheme(styled(Component))
        disabled={true}
        fontSize={16}
        my="10"
        p="8px 16px"
        type="submit"
      >
        Send
      </WithTheme(styled(Component))>
      <styled(Link)
        to="login"
      >
        Login
      </styled(Link)>
    </styled(Component)>
  </styled(Component)>
</styled(Component)>
`;

exports[`features/auth/new-password should render AlertDanger component 1`] = `
<styled(Component)>
  <WithTheme(styled(Component))>
    <styled(Component)>
      <img
        alt="Logo"
        src="https://s3.amazonaws.com/amous-front-dev/logo/undefined-logo.svg"
      />
    </styled(Component)>
    <WithTheme(styled(Form))>
      <WithTheme(styled(Component)) />
      <Field
        component={[Function]}
        errorFontSize={10}
        errorMargin="0 0 5px 0"
        fontSize={14}
        margin="10px 0px 10px 0px"
        name="oldPassword"
        padding="0px 26px"
        placeholder="Old password"
        type="password"
        validate={[Function]}
        width={1}
      />
      <Field
        component={[Function]}
        errorFontSize={10}
        errorMargin="0 0 5px 0"
        fontSize={14}
        margin="10px 0px 10px 0px"
        name="newPassword"
        padding="0px 26px"
        placeholder="New password"
        type="password"
        validate={[Function]}
        width={1}
      />
      <WithTheme(styled(styled(Component)))
        disabled={true}
        fontSize={16}
        my="10"
        p="8px 16px"
        type="submit"
        width={1}
      >
        SEND NEW PASSWORD
      </WithTheme(styled(styled(Component)))>
    </WithTheme(styled(Form))>
    <styled(styled(Component))>
      error
    </styled(styled(Component))>
  </WithTheme(styled(Component))>
</styled(Component)>
`;

exports[`features/auth/new-password should render new password form 1`] = `
<styled(Component)>
  <WithTheme(styled(Component))>
    <styled(Component)>
      <img
        alt="Logo"
        src="https://s3.amazonaws.com/amous-front-dev/logo/undefined-logo.svg"
      />
    </styled(Component)>
    <WithTheme(styled(Form))>
      <WithTheme(styled(Component)) />
      <Field
        component={[Function]}
        errorFontSize={10}
        errorMargin="0 0 5px 0"
        fontSize={14}
        margin="10px 0px 10px 0px"
        name="oldPassword"
        padding="0px 26px"
        placeholder="Old password"
        type="password"
        validate={[Function]}
        width={1}
      />
      <Field
        component={[Function]}
        errorFontSize={10}
        errorMargin="0 0 5px 0"
        fontSize={14}
        margin="10px 0px 10px 0px"
        name="newPassword"
        padding="0px 26px"
        placeholder="New password"
        type="password"
        validate={[Function]}
        width={1}
      />
      <WithTheme(styled(styled(Component)))
        disabled={true}
        fontSize={16}
        my="10"
        p="8px 16px"
        type="submit"
        width={1}
      >
        SEND NEW PASSWORD
      </WithTheme(styled(styled(Component)))>
    </WithTheme(styled(Form))>
  </WithTheme(styled(Component))>
</styled(Component)>
`;
